changed padding of coruse-summary

--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@
                             betaler en semesteravgift hvert semester (student.oslomet.no).</a></p>
                 </div>
 
-                <div id="jobb-muligheter class=" tabcontent">
+                <div id="jobb-muligheter" class=" tabcontent">
                     <h2>Hva kan du jobbe som?</h2>
                     <p>Med dette studiet får du IT-kompetanse som er etterspurt i arbeidslivet, særlig om du velger
                         spesialiseringene vitenskapelige beregninger eller statistiske og datadrevne metoder.
