added comments and changed id of "hva-koster-det" to "kostnad"

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
     <main>
         <article>
+            <!-- video about the study at the top of the page -->
             <div class="video-container">
                 <iframe src="https://film.oslomet.no/v.ihtml/player.html?source=embed&photo%5fid=95216483"
                     allowfullscreen title="Oslomet Dataingeiør og matematisk modellering" loading="lazy">
@@ -102,7 +103,7 @@
                         oppbygging</button>
                     <button class="tablinks" onclick="openTab(event, 'undervisningen')">Hvordan foregår
                         undervisningen?</button>
-                    <button class="tablinks" onclick="openTab(event, 'hva-koster-det')">Hva koster det?</button>
+                    <button class="tablinks" onclick="openTab(event, 'kostnad')">Hva koster det?</button>
                     <button class="tablinks" onclick="openTab(event, 'jobb-muligheter')">Hva kan du jobbe
                         som?</button>
                     <button class="tablinks" onclick="openTab(event, 'utveksling')">Utveksling</button>
@@ -962,7 +963,7 @@
                     </p>
                 </div>
 
-                <div id="hva-koster-det" class="tabcontent">
+                <div id="kostnad" class="tabcontent">
                     <h2>Hva koster det?</h2>
                     <p>Det er ikke studieavgift på dette studiet. <a class="course-info-links"
                             href="https://student.oslomet.no/semesteravgift">Du
@@ -1013,9 +1014,11 @@
                         </svg>
                     </a>
                 </div>
+                <!-- javascript for the buttons -->
                 <script src="javascript/index-tabs"></script>
             </section>
         </article>
+        <!-- end of course-info-tabs -->
 
         <!-- general information about the study -->
         <article>
