added some comments line 114

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         studiemuligheter ved OsloMet</button>
                 </div>
 
-                <!-- THE FOLLOWING IS THE CONTENT THAT IS REVEALED WHEN PRESSING THE BUTTONS ABOVE -->
+                <!-- THE FOLLOWING IS THE CONTENT THAT IS REVEALED WHEN PRESSING THE BUTTONS ABOVE, HIDDEN BY DEFAULT -->
 
                 <div id="studiestart" class="tabcontent">
                     <h2>Studiestart</h2>
