added comments line 238

--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
                         </a>
                     </p>
                 </div>
-                <!--Studiets-oppbygging is a large, must have own sections-->
+                <!--Studiets-oppbygging is a large, must have own sections -->
                 <!-- using divs to structure each course -->
-                <!-- line 237 to 944 -->
+                <!-- hr-dashed is used to separate different "emnegruppe" -->
                 <div id="studiets-oppbygging" class="tabcontent">
 
                     <p id="star-symbol-explainer">
