added aria labels to course-info-tabs

--- a/index.html
+++ b/index.html
@@ -94,20 +94,20 @@
             <!-- buttons that reveal information about the course etc -->
             <section id="course-info-tabs">
                 <div class="tab">
-                    <button class="tablinks" onclick="openTab(event, 'studiestart')">Studiestart</button>
-                    <button class="tablinks" onclick="openTab(event, 'opptakskrav-og-poeng')">Opptakskrav og
+                    <button class="tablinks" aria-label="Studiestart" onclick="openTab(event, 'studiestart')">Studiestart</button>
+                    <button class="tablinks" aria-label="Opptakskrav og poeng" onclick="openTab(event, 'opptakskrav-og-poeng')">Opptakskrav og
                         poeng</button>
-                    <button class="tablinks" onclick="openTab(event, 'slik-søker-du')">Slik søker du</button>
-                    <button class="tablinks" onclick="openTab(event, 'hva-lærer-du')">Hva lærer du?</button>
-                    <button class="tablinks" onclick="openTab(event, 'studiets-oppbygging')">Studiets
+                    <button class="tablinks" aria-label="Slik søker du" onclick="openTab(event, 'slik-søker-du')">Slik søker du</button>
+                    <button class="tablinks" aria-label="Hva lærer du?" onclick="openTab(event, 'hva-lærer-du')">Hva lærer du?</button>
+                    <button class="tablinks" aria-label="Studiets oppbygging" onclick="openTab(event, 'studiets-oppbygging')">Studiets
                         oppbygging</button>
-                    <button class="tablinks" onclick="openTab(event, 'undervisningen')">Hvordan foregår
+                    <button class="tablinks" aria-label="Hvordan foregår undervisningen?" onclick="openTab(event, 'undervisningen')">Hvordan foregår
                         undervisningen?</button>
-                    <button class="tablinks" onclick="openTab(event, 'kostnad')">Hva koster det?</button>
-                    <button class="tablinks" onclick="openTab(event, 'jobb-muligheter')">Hva kan du jobbe
+                    <button class="tablinks" aria-label="Hva koster det?" onclick="openTab(event, 'kostnad')">Hva koster det?</button>
+                    <button class="tablinks" aria-label="Hva kan du jobbe som?"  onclick="openTab(event, 'jobb-muligheter')">Hva kan du jobbe
                         som?</button>
-                    <button class="tablinks" onclick="openTab(event, 'utveksling')">Utveksling</button>
-                    <button class="tablinks" onclick="openTab(event, 'videre-studiemuligheter')">Videre
+                    <button class="tablinks" aria-label="Utveksling" onclick="openTab(event, 'utveksling')">Utveksling</button>
+                    <button class="tablinks" aria-label="Videre studiemuligheter ved OsloMet" onclick="openTab(event, 'videre-studiemuligheter')">Videre
                         studiemuligheter ved OsloMet</button>
                 </div>
 
