removed some aria labels

--- a/index.html
+++ b/index.html
@@ -239,11 +239,11 @@
                 <div id="studiets-oppbygging" class="tabcontent">
 
                     <p id="star-symbol-explainer">
-                        <i class="fa fa-star-o" alt="Stjerne"></i>
+                        <i class="fa fa-star-o" alt="Stjerne" ></i>
                         Valgfritt emne
                     </p>
                     <p id="double-angle-symbol-explainer">
-                        <i class="fa fa-angle-double-right" alt="doblet vinklet til høyre pil"></i>
+                        <i class="fa fa-angle-double-right"></i>
                         Løper over flere semestre
                     </p>
 
