added aria labels

--- a/index.html
+++ b/index.html
@@ -239,11 +239,11 @@
                 <div id="studiets-oppbygging" class="tabcontent">
 
                     <p id="star-symbol-explainer">
-                        <i class="fa fa-star-o" alt="Stjerne" ></i>
+                        <i class="fa fa-star-o" alt="Stjerne" aria-label="valgfritt emne" ></i>
                         Valgfritt emne
                     </p>
                     <p id="double-angle-symbol-explainer">
-                        <i class="fa fa-angle-double-right"></i>
+                        <i class="fa fa-angle-double-right" aria-label="løper over flere semetre"></i>
                         Løper over flere semestre
                     </p>
 
