--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         </a>
         <nav>
             <!-- search button, takes you to the search page -->
-            <a id="search-button" href="https://www.oslomet.no/s?q" aria-hidden="true" title="Søkeknapp"><i
+            <a id="search-button" href="https://www.oslomet.no/s?q" title="Søkeknapp"><i
                     class="fa fa-search"></i>
                 <span class="sr-only">Søke-knapp</span></a>
             <!-- hamburger menu to navigate -->
             <div class="dropdown">
-                <button class="dropbtn" id="menu-button" aria-hidden="true" title="Navigeringsmeny"><i
-                        class="fa fa-bars" aria-hidden="true"></i>
+                <button class="dropbtn" id="menu-button" title="Navigeringsmeny"><i
+                        class="fa fa-bars"></i>
                     <span class="sr-only">Navigeringsmeny</span></button>
                 <div class="dropdown-content" id="dropdown-menu">
                     <a href="other-pages/activity.html">Activity</a>
