removed aria-hidden

--- a/index.html
+++ b/index.html
@@ -1221,7 +1221,7 @@
         <article class="more-info">
             <div class="row">
                 <section id="col1">
-                    <span id="icon" class="fa fa-map-marker" aria-hidden="true" title="Map markering"
+                    <span id="icon" class="fa fa-map-marker" title="Kart markering"
                         alt="Map markering"><span class="sr-only">Map markering</span></span>
                     <address class="address-font">
                         <a class="more-info-links" href="https://maps.app.goo.gl/KMtNLzg2X4wWKpAG9">
@@ -1233,7 +1233,7 @@
                     </address>
                 </section>
                 <section id="col2">
-                    <span id="icon" class="fa fa-phone" aria-hidden="true" title="Telefon"><span
+                    <span id="icon" class="fa fa-phone" title="Telefon"><span
                             class="sr-only">Telefon</span></span>
                     <address class="address-font">
                         <h3>Kontakt oss</h3>
@@ -1241,12 +1241,12 @@
                     </address>
                 </section>
                 <section id="col3">
-                    <span id="icon" class="fa fa-info" aria-hidden="true" title="Info"><span
+                    <span id="icon" class="fa fa-info" title="Info"><span
                             class="sr-only">Info</span></span>
                     <span>
                         <h3>Mer Info</h3>
                         <div class="more-info-tab">
-                            <button id="toggle-tab" class="more-info-tab-button" aria-hidden="true"
+                            <button id="toggle-tab" class="more-info-tab-button"
                                 title="Expand Info Menu"><span class="sr-only">Expand Info Menu</span>
                                 <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                     viewBox="2 1 20 20" alt=" Nedover pil">
@@ -1285,19 +1285,19 @@
         <nav class="mediabox">
             <ul class="media">
                 <li>
-                    <a href="https://x.com/oslomet" class="fa fa-twitter" aria-hidden="true" title="Twitter"><span
+                    <a href="https://x.com/oslomet" class="fa fa-twitter" title="Twitter/x"><span
                             class="sr-only">Twitter</span></a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook" aria-hidden="true"
+                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook"
                         title="Facebook"><span class="sr-only">Facebook</span></a>
                 </li>
                 <li>
-                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" aria-hidden="true"
+                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin"
                         title="LinkedIn"><span class="sr-only">LinkedIn</span></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" aria-hidden="true"
+                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram"
                         title="Instagram"><span class="sr-only">Instagram</span></a>
                 </li>
         </nav>
