--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <!-- video about the study at the top of the page -->
             <div class="video-container">
                 <iframe src="https://film.oslomet.no/v.ihtml/player.html?source=embed&photo%5fid=95216483"
-                    allowfullscreen title="Oslomet Dataingeiør og matematisk modellering" loading="lazy">
+                    allowfullscreen title="Oslomet Dataingeniør og matematisk modellering" loading="lazy">
                     <!--URL to film from https://www.oslomet.no/studier/tkd/matematisk-modellering-datavitenskap inspection -->
                 </iframe>
             </div>
@@ -1111,7 +1111,7 @@
                     </a>
                     <a class="course-glance-container" href="https://www.oslomet.no/studier/tkd/dataingenior">
                         <div class="course-glance">
-                            <h3>Dataingeiør</h3>
+                            <h3>Dataingeniør</h3>
                             <div class="course-glance-points">
                                 <p>Bachelorprogram</p>
                                 <p>Pilestredet i Oslo</p>
