added newsletter in footer

--- a/index.html
+++ b/index.html
@@ -1220,6 +1220,16 @@
     <footer>
         <article class="more-info">
             <div class="row">
+                <section id="col2">
+                    <span id="icon" class="fa fa-newspaper-o" title="Telefon"><span
+                            class="sr-only">Telefon</span></span>
+                    <address class="address-font">
+                        <a class="newsletter" href="https://www.oslomet.no/nyhetsbrev">
+                            <h3>Abonner på vårt nyhetsbrev!</h3>
+                        </a>
+                        <p>Hold deg oppdatert på hva som skjer på OsloMet.</p>
+                    </address>
+                </section>
                 <section id="col1">
                     <span id="icon" class="fa fa-map-marker" title="Kart markering"
                         alt="Map markering"><span class="sr-only">Map markering</span></span>
