--- a/index.html
+++ b/index.html
@@ -1221,8 +1221,8 @@
         <article class="more-info">
             <div class="row">
                 <section id="col2">
-                    <span id="icon" class="fa fa-newspaper-o" title="Telefon"><span
-                            class="sr-only">Telefon</span></span>
+                    <span id="icon" class="fa fa-newspaper-o" title="Newsletter"><span
+                            class="sr-only">Newsletter</span></span>
                     <address class="address-font">
                         <a class="newsletter" href="https://www.oslomet.no/nyhetsbrev">
                             <h3>Abonner på vårt nyhetsbrev!</h3>
