changed social media icon sizes

--- a/index.html
+++ b/index.html
@@ -1295,8 +1295,8 @@
         <nav class="mediabox">
             <ul class="media">
                 <li>
-                    <a href="https://x.com/oslomet" class="fa fa-twitter" title="Twitter/x"><span
-                            class="sr-only">Twitter</span></a>
+                    <a href="https://x.com/oslomet" class="fa fa-twitter" title="Twitter / X"><span
+                            class="sr-only">Twitter / X</span></a>
                 </li>
                 <li>
                     <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook"
