--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -226,7 +226,7 @@
         <nav class="mediabox-activity">
             <ul class="media-activity">
                 <li>
-                    <a href="https://x.com/visitoslo" class="fa fa-twitter" alt="Twitter"></a>
+                    <a href="https://x.com/visitoslo" class="fa fa-twitter" alt="Twitter / X"></a>
 
                 </li>
                 <li>
@@ -238,8 +238,6 @@
                         title="LinkedIn"><span class="sr-only">LinkedIn</span></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" aria-hidden="true"
-                        title="Instagram"><span class="sr-only">Instagram</span></a>
                     <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" aria-hidden="true"
                         title="Instagram"><span class="sr-only">Instagram</span></a>
                 </li>
