--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -87,8 +87,19 @@
     <footer>
         <article class="more-info">
             <div class="row">
+                <section id="col2">
+                    <span id="icon" class="fa fa-newspaper-o" title="Newsletter"><span
+                            class="sr-only">Newsletter</span></span>
+                    <address class="address-font">
+                        <a class="newsletter" href="https://www.oslomet.no/nyhetsbrev">
+                            <h3>Abonner på vårt nyhetsbrev!</h3>
+                        </a>
+                        <p>Hold deg oppdatert på hva som skjer på OsloMet.</p>
+                    </address>
+                </section>
                 <section id="col1">
-                    <span id="icon" class="fa fa-map-marker" aria-hidden="true" title="Map markering" alt="Map markering"><span class="sr-only">Map markering</span></span>
+                    <span id="icon" class="fa fa-map-marker" title="Kart markering"
+                        alt="Map markering"><span class="sr-only">Map markering</span></span>
                     <address class="address-font">
                         <a class="more-info-links" href="https://maps.app.goo.gl/KMtNLzg2X4wWKpAG9">
                             <h3>Oslo Metropolitan University</h3>
@@ -99,18 +110,21 @@
                     </address>
                 </section>
                 <section id="col2">
-                    <span id="icon" class="fa fa-phone" aria-hidden="true" title="Telefon"><span class="sr-only">Telefon</span></span>
+                    <span id="icon" class="fa fa-phone" title="Telefon"><span
+                            class="sr-only">Telefon</span></span>
                     <address class="address-font">
                         <h3>Kontakt oss</h3>
                         <p>Tlf.: 67 23 50 00</p>
                     </address>
                 </section>
                 <section id="col3">
-                    <span id="icon" class="fa fa-info" aria-hidden="true" title="Info"><span class="sr-only">Info</span></span>
+                    <span id="icon" class="fa fa-info" title="Info"><span
+                            class="sr-only">Info</span></span>
                     <span>
-                        <h3> Mer Info</h3>
+                        <h3>Mer Info</h3>
                         <div class="more-info-tab">
-                            <button id="toggle-tab" class="more-info-tab-button" aria-hidden="true" title="Expand Info Menu"><span class="sr-only">Expand Info Menu</span>
+                            <button id="toggle-tab" class="more-info-tab-button"
+                                title="Expand Info Menu"><span class="sr-only">Expand Info Menu</span>
                                 <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                     viewBox="2 1 20 20" alt=" Nedover pil">
                                     <path fill-rule="evenodd"
@@ -139,7 +153,7 @@
                             <a class="more-info-links"
                                 href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a>
                         </div>
-                        <script src="../javascript/index-tabs"></script>
+                        <script src="javascript/index-tabs"></script>
                     </span>
                 </section>
             </div>
@@ -148,18 +162,21 @@
         <nav class="mediabox">
             <ul class="media">
                 <li>
-                    <a href="https://x.com/oslomet" class="fa fa-twitter" aria-hidden="true" title="Twitter"><span class="sr-only">Twitter</span></a>
+                    <a href="https://x.com/oslomet" class="fa fa-twitter" title="Twitter / X"><span
+                            class="sr-only">Twitter / X</span></a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook" aria-hidden="true" title="Facebook"><span class="sr-only">Facebook</span></a>
+                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook"
+                        title="Facebook"><span class="sr-only">Facebook</span></a>
                 </li>
                 <li>
-                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" aria-hidden="true" title="LinkedIn"><span class="sr-only">LinkedIn</span></a>
+                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin"
+                        title="LinkedIn"><span class="sr-only">LinkedIn</span></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" aria-hidden="true" title="Instagram"><span class="sr-only">Instagram</span></a>
+                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram"
+                        title="Instagram"><span class="sr-only">Instagram</span></a>
                 </li>
-            </ul>
         </nav>
     </footer>
 </body>
