fixed javascript link

--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -182,7 +182,7 @@
                             <a class="more-info-links"
                                 href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a>
                         </div>
-                        <script src="javascript/index-tabs"></script>
+                        <script src="../javascript/index-tabs"></script>
                     </span>
                 </section>
             </div>
