--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -227,18 +227,16 @@
             <ul class="media-activity">
                 <li>
                     <a href="https://x.com/visitoslo" class="fa fa-twitter" alt="Twitter / X"></a>
-
                 </li>
                 <li>
                     <a href="https://www.facebook.com/VisitOslo/" class="fa fa-facebook" alt="Facebook"></a>
-
                 </li>
                 <li>
-                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" aria-hidden="true"
+                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin"
                         title="LinkedIn"><span class="sr-only">LinkedIn</span></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" aria-hidden="true"
+                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram"
                         title="Instagram"><span class="sr-only">Instagram</span></a>
                 </li>
             </ul>
