changed title to Nyhetsbrev instead of newsletter

--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -88,8 +88,8 @@
         <article class="more-info">
             <div class="row">
                 <section id="col2">
-                    <span id="icon" class="fa fa-newspaper-o" title="Newsletter"><span
-                            class="sr-only">Newsletter</span></span>
+                    <span id="icon" class="fa fa-newspaper-o" title="Nyhetsbrev"><span
+                            class="sr-only">Nyhetsbrev</span></span>
                     <address class="address-font">
                         <a class="newsletter" href="https://www.oslomet.no/nyhetsbrev">
                             <h3>Abonner på vårt nyhetsbrev!</h3>
