--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -104,11 +104,9 @@
                 En annen feil gjelder med funksjonaliteten ved touchscreen. Siden meny åpnet via hover, vil den åpenbart
                 ikke kunne åpnes. Vi fikset dette ved å gjøre at den åpner ved å trykkes på, og lukkes ved å trykkes på
                 igjen, eller ved å trykke utenfor menyen. Etter å ha fikset all dette nevnt, så gjenstår det 9 varseler.
-                De handler om
-                om denne aria-hidden som gjør at dersom ikonene ikke laster opp og ikke er synlig gir det en tekst
-                isteden.
-                Itilegg brukes det tooltip. Siden teksten er den samme i begge kan det virke unødvendig, men vi har
-                ingen tekst ved siden
+                De handler om denne alternative teksten altså, dersom ikonene ikke laster opp og ikke er synlig gir det en 
+                tekst isteden. Itilegg brukes det tooltip. Siden teksten er den samme i begge kan det virke unødvendig, men 
+                vi har ingen tekst ved siden
                 av ikonene. </p>
         </article>
     </main>
