added link to contact page in footer

--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="images\Logo_of_Oslo_Metropolitan_University_ffd500_square.png">
     <title>Accessibility</title>
 </head>
- 
+
 <body>
     <header>
         <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
@@ -127,8 +127,8 @@
                     </address>
                 </section>
                 <section id="col1">
-                    <span id="icon" class="fa fa-map-marker" title="Kart markering"
-                        alt="Map markering"><span class="sr-only">Map markering</span></span>
+                    <span id="icon" class="fa fa-map-marker" title="Kart markering" alt="Map markering"><span
+                            class="sr-only">Map markering</span></span>
                     <address class="address-font">
                         <a class="more-info-links" href="https://maps.app.goo.gl/KMtNLzg2X4wWKpAG9">
                             <h3>Oslo Metropolitan University</h3>
@@ -139,21 +139,21 @@
                     </address>
                 </section>
                 <section id="col2">
-                    <span id="icon" class="fa fa-phone" title="Telefon"><span
-                            class="sr-only">Telefon</span></span>
+                    <span id="icon" class="fa fa-phone" title="Telefon"><span class="sr-only">Telefon</span></span>
                     <address class="address-font">
-                        <h3>Kontakt oss</h3>
+                        <a class="more-info-links" href="https://www.oslomet.no/om/kontakt">
+                            <h3>Kontakt oss</h3>
+                        </a>
                         <p>Tlf.: 67 23 50 00</p>
                     </address>
                 </section>
                 <section id="col3">
-                    <span id="icon" class="fa fa-info" title="Info"><span
-                            class="sr-only">Info</span></span>
+                    <span id="icon" class="fa fa-info" title="Info"><span class="sr-only">Info</span></span>
                     <span>
                         <h3>Mer Info</h3>
                         <div class="more-info-tab">
-                            <button id="toggle-tab" class="more-info-tab-button"
-                                title="Expand Info Menu"><span class="sr-only">Expand Info Menu</span>
+                            <button id="toggle-tab" class="more-info-tab-button" title="Expand Info Menu"><span
+                                    class="sr-only">Expand Info Menu</span>
                                 <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                     viewBox="2 1 20 20" alt=" Nedover pil">
                                     <path fill-rule="evenodd"
@@ -195,16 +195,16 @@
                             class="sr-only">Twitter / X</span></a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook"
-                        title="Facebook"><span class="sr-only">Facebook</span></a>
+                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook" title="Facebook"><span
+                            class="sr-only">Facebook</span></a>
                 </li>
                 <li>
-                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin"
-                        title="LinkedIn"><span class="sr-only">LinkedIn</span></a>
+                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin" title="LinkedIn"><span
+                            class="sr-only">LinkedIn</span></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram"
-                        title="Instagram"><span class="sr-only">Instagram</span></a>
+                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" title="Instagram"><span
+                            class="sr-only">Instagram</span></a>
                 </li>
         </nav>
     </footer>
