--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -184,7 +184,9 @@
                     <span id="icon" class="fa fa-phone" aria-hidden="true" title="Telefon"><span
                             class="sr-only">Telefon</span></span>
                     <address class="address-font">
-                        <h3>Kontakt oss</h3>
+                        <a class="more-info-links" href="https://www.oslomet.no/om/kontakt">
+                            <h3>Kontakt oss</h3>
+                        </a>
                         <p>Tlf.: 23 10 62 00 </p>
 
                     </address>
