--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -113,7 +113,9 @@
                     <span id="icon" class="fa fa-phone" title="Telefon"><span
                             class="sr-only">Telefon</span></span>
                     <address class="address-font">
-                        <h3>Kontakt oss</h3>
+                        <a class="more-info-links" href="https://www.oslomet.no/om/kontakt">
+                            <h3>Kontakt oss</h3>
+                        </a>
                         <p>Tlf.: 67 23 50 00</p>
                     </address>
                 </section>
