added aria-hidden on uninteractive icons again

--- a/index.html
+++ b/index.html
@@ -1221,7 +1221,7 @@
         <article class="more-info">
             <div class="row">
                 <section id="col2">
-                    <span id="icon" class="fa fa-newspaper-o" title="Nyhetsbrev"><span
+                    <span id="icon" class="fa fa-newspaper-o" title="Nyhetsbrev" aria-hidden="true"><span
                             class="sr-only">Nyhetsbrev</span></span>
                     <address class="address-font">
                         <a class="newsletter" href="https://www.oslomet.no/nyhetsbrev">
@@ -1231,7 +1231,7 @@
                     </address>
                 </section>
                 <section id="col1">
-                    <span id="icon" class="fa fa-map-marker" title="Kart markering"
+                    <span id="icon" class="fa fa-map-marker" title="Kart markering" aria-hidden="true"
                         alt="Map markering"><span class="sr-only">Map markering</span></span>
                     <address class="address-font">
                         <a class="more-info-links" href="https://maps.app.goo.gl/KMtNLzg2X4wWKpAG9">
@@ -1243,7 +1243,7 @@
                     </address>
                 </section>
                 <section id="col2">
-                    <span id="icon" class="fa fa-phone" title="Telefon"><span
+                    <span id="icon" class="fa fa-phone" title="Telefon" aria-hidden="true"><span
                             class="sr-only">Telefon</span></span>
                     <address class="address-font">
                         <a class="more-info-links" href="https://www.oslomet.no/om/kontakt">
@@ -1253,7 +1253,7 @@
                     </address>
                 </section>
                 <section id="col3">
-                    <span id="icon" class="fa fa-info" title="Info"><span
+                    <span id="icon" class="fa fa-info" title="Info" aria-hidden="true"><span
                             class="sr-only">Info</span></span>
                     <span>
                         <h3>Mer Info</h3>
