--- a/index.html
+++ b/index.html
@@ -1259,8 +1259,8 @@
                         <h3>Mer Info</h3>
                         <div class="more-info-tab">
                             <button id="toggle-tab" class="more-info-tab-button"
-                                title="Expand Info Menu"><span class="sr-only">Expand Info Menu</span>
-                                <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                title="Utvid Info Menu"><span class="sr-only">Expand Info Menu</span>
+                                <svg id="toggle-icon" title="utvid" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                     viewBox="2 1 20 20" alt=" Nedover pil">
                                     <path fill-rule="evenodd"
                                         d="M12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293 1.414 1.414L12 17.414z" />
