--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -104,8 +104,10 @@
                 En annen feil gjelder med funksjonaliteten ved touchscreen. Siden meny åpnet via hover, vil den åpenbart
                 ikke kunne åpnes. Vi fikset dette ved å gjøre at den åpner ved å trykkes på, og lukkes ved å trykkes på
                 igjen, eller ved å trykke utenfor menyen. Etter å ha fikset all dette nevnt, så gjenstår det 9 varseler.
-                De handler om denne alternative teksten altså, dersom ikonene ikke laster opp og ikke er synlig gir det en 
-                tekst isteden. Itilegg brukes det tooltip. Siden teksten er den samme i begge kan det virke unødvendig, men 
+                De handler om denne alternative teksten altså, dersom ikonene ikke laster opp og ikke er synlig gir det
+                en
+                tekst isteden. Itilegg brukes det tooltip. Siden teksten er den samme i begge kan det virke unødvendig,
+                men
                 vi har ingen tekst ved siden
                 av ikonene. </p>
         </article>
@@ -115,7 +117,7 @@
         <article class="more-info">
             <div class="row">
                 <section id="col2">
-                    <span id="icon" class="fa fa-newspaper-o" title="Nyhetsbrev"><span
+                    <span id="icon" class="fa fa-newspaper-o" title="Nyhetsbrev" aria-hidden="true"><span
                             class="sr-only">Nyhetsbrev</span></span>
                     <address class="address-font">
                         <a class="newsletter" href="https://www.oslomet.no/nyhetsbrev">
@@ -125,8 +127,8 @@
                     </address>
                 </section>
                 <section id="col1">
-                    <span id="icon" class="fa fa-map-marker" title="Kart markering" alt="Map markering"><span
-                            class="sr-only">Map markering</span></span>
+                    <span id="icon" class="fa fa-map-marker" title="Kart markering" aria-hidden="true"
+                        alt="Map markering"><span class="sr-only">Map markering</span></span>
                     <address class="address-font">
                         <a class="more-info-links" href="https://maps.app.goo.gl/KMtNLzg2X4wWKpAG9">
                             <h3>Oslo Metropolitan University</h3>
@@ -137,7 +139,8 @@
                     </address>
                 </section>
                 <section id="col2">
-                    <span id="icon" class="fa fa-phone" title="Telefon"><span class="sr-only">Telefon</span></span>
+                    <span id="icon" class="fa fa-phone" title="Telefon" aria-hidden="true"><span
+                            class="sr-only">Telefon</span></span>
                     <address class="address-font">
                         <a class="more-info-links" href="https://www.oslomet.no/om/kontakt">
                             <h3>Kontakt oss</h3>
@@ -146,14 +149,15 @@
                     </address>
                 </section>
                 <section id="col3">
-                    <span id="icon" class="fa fa-info" title="Info"><span class="sr-only">Info</span></span>
+                    <span id="icon" class="fa fa-info" title="Info" aria-hidden="true"><span
+                            class="sr-only">Info</span></span>
                     <span>
                         <h3>Mer Info</h3>
                         <div class="more-info-tab">
-                            <button id="toggle-tab" class="more-info-tab-button" title="Expand Info Menu"><span
+                            <button id="toggle-tab" class="more-info-tab-button" title="Utvid Info Menu"><span
                                     class="sr-only">Expand Info Menu</span>
-                                <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
-                                    viewBox="2 1 20 20" alt=" Nedover pil">
+                                <svg id="toggle-icon" title="utvid" xmlns="http://www.w3.org/2000/svg" width="30"
+                                    height="30" viewBox="2 1 20 20" alt=" Nedover pil">
                                     <path fill-rule="evenodd"
                                         d="M12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293 1.414 1.414L12 17.414z" />
                                 </svg>
