--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -88,7 +88,7 @@
         <article class="more-info">
             <div class="row">
                 <section id="col2">
-                    <span id="icon" class="fa fa-newspaper-o" title="Nyhetsbrev"><span
+                    <span id="icon" class="fa fa-newspaper-o" title="Nyhetsbrev" aria-hidden="true"><span
                             class="sr-only">Nyhetsbrev</span></span>
                     <address class="address-font">
                         <a class="newsletter" href="https://www.oslomet.no/nyhetsbrev">
@@ -98,7 +98,7 @@
                     </address>
                 </section>
                 <section id="col1">
-                    <span id="icon" class="fa fa-map-marker" title="Kart markering"
+                    <span id="icon" class="fa fa-map-marker" title="Kart markering" aria-hidden="true"
                         alt="Map markering"><span class="sr-only">Map markering</span></span>
                     <address class="address-font">
                         <a class="more-info-links" href="https://maps.app.goo.gl/KMtNLzg2X4wWKpAG9">
@@ -110,7 +110,7 @@
                     </address>
                 </section>
                 <section id="col2">
-                    <span id="icon" class="fa fa-phone" title="Telefon"><span
+                    <span id="icon" class="fa fa-phone" title="Telefon" aria-hidden="true"><span
                             class="sr-only">Telefon</span></span>
                     <address class="address-font">
                         <a class="more-info-links" href="https://www.oslomet.no/om/kontakt">
@@ -120,40 +120,19 @@
                     </address>
                 </section>
                 <section id="col3">
-                    <span id="icon" class="fa fa-info" title="Info"><span
+                    <span id="icon" class="fa fa-info" title="Info" aria-hidden="true"><span
                             class="sr-only">Info</span></span>
                     <span>
                         <h3>Mer Info</h3>
                         <div class="more-info-tab">
                             <button id="toggle-tab" class="more-info-tab-button"
-                                title="Expand Info Menu"><span class="sr-only">Expand Info Menu</span>
-                                <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                title="Utvid Info Menu"><span class="sr-only">Expand Info Menu</span>
+                                <svg id="toggle-icon" title="utvid" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                     viewBox="2 1 20 20" alt=" Nedover pil">
                                     <path fill-rule="evenodd"
                                         d="M12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293 1.414 1.414L12 17.414z" />
                                 </svg>
                             </button>
-                        </div>
-                        <div id="more-info-tab" class="more-info-tabcontent">
-                            <a class="more-info-links" href="https://www.oslomet.no/en">English</a>
-                            <a class="more-info-links" href="https://www.oslomet.no/alumni">Alumni</a>
-                            <a class="more-info-links"
-                                href="https://www.oslomet.no/om/ansatteoversikt">Ansatteoversikt</a>
-                            <a class="more-info-links"
-                                href="https://www.oslomet.no/om/arrangement/arrangementsoversikt">Arrangementsoversikt</a>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/for-ansatte">For ansatte</a>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/for-studenter">For
-                                studenter</a>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/ledige-stillinger">Ledige
-                                stillinger</a>
-                            <a class="more-info-links"
-                                href="https://www.oslomet.no/om/personvernerklering-informasjonskapslar">Personvernerklæring
-                                og <br> informasjonskapslar</a>
-                            <a class="more-info-links" href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a>
-                            <a class="more-info-links"
-                                href="https://www.oslomet.no/om/tilgjengelegheitserklering">Tilgjengelegheitserklæring</a>
-                            <a class="more-info-links"
-                                href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a>
                         </div>
                         <script src="../javascript/index-tabs"></script>
                     </span>
