content in more info was missing, added

--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -134,6 +134,27 @@
                                 </svg>
                             </button>
                         </div>
+                        <div id="more-info-tab" class="more-info-tabcontent">
+                            <a class="more-info-links" href="https://www.oslomet.no/en">English</a>
+                            <a class="more-info-links" href="https://www.oslomet.no/alumni">Alumni</a>
+                            <a class="more-info-links"
+                                href="https://www.oslomet.no/om/ansatteoversikt">Ansatteoversikt</a>
+                            <a class="more-info-links"
+                                href="https://www.oslomet.no/om/arrangement/arrangementsoversikt">Arrangementsoversikt</a>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/for-ansatte">For ansatte</a>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/for-studenter">For
+                                studenter</a>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/ledige-stillinger">Ledige
+                                stillinger</a>
+                            <a class="more-info-links"
+                                href="https://www.oslomet.no/om/personvernerklering-informasjonskapslar">Personvernerklæring
+                                og <br> informasjonskapslar</a>
+                            <a class="more-info-links" href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a>
+                            <a class="more-info-links"
+                                href="https://www.oslomet.no/om/tilgjengelegheitserklering">Tilgjengelegheitserklæring</a>
+                            <a class="more-info-links"
+                                href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a>
+                        </div>
                         <script src="../javascript/index-tabs"></script>
                     </span>
                 </section>
